# ButterFlight

./: .gitignore  CMakeLists.txt  README.md
doc/: Butterfly_Paper.txt  high_concepts.tex  implementation_log.md
doc/Design_Doc/: Authoring Tool Design Doc Outline - 2026.docx  Authoring Tool Design Doc Outline - 2026.txt  ButterFlight_DesignDoc.out  ButterFlight_DesignDoc.tex  gantt.csv  gantt.xlsx
doc/Design_Doc/examples/: Group10 - AuthoringToolDesignDoc_DanielGarciaStephenLovejoy.txt
doc/Literature_Survey/: Literature_Survey_ButterFlight.tex
doc/Literature_Survey/Papers/: 1-s2.0-S0022519302930651-main.txt  1-s2.0-S0921889011002260-main.txt  2013_CGF_InsectSwarmSimulation_Preprint.txt  2516971.2516976.txt  37402.37406.txt  566654.566636.txt  Bswarm.txt  Computer Animation   Virtual - 2019 - Chen - Shape‐constrained flying insects animation.txt  Ellington-AerodynamicsHoveringInsect-1984.txt  Wing_shape_and_flight_behaviour_in_butterflies_Lep.txt  bridson-siggraph2007-curlnoise.txt  sridhar-et-al-2016-instantaneous-lift-and-motion-characteristics-of-butterflies-in-free-flight.txt  sridhar-et-al-2020-geometric-formulation-for-the-dynamics-of-monarch-butterfly-with-the-effects-of-abdomen-undulation.txt  wilson-albertani-2014-wing-flapping-and-abdomen-actuation-optimization-for-hovering-in-the-butterfly-idea-leuconoe.txt  wu2003realistic.txt
doc/Literature_Survey/examples/: Hands of Midas literature survey.txt
doc/Others/: CIS660 Authoring Tool Progress Report.doc  CIS6600 Authoring Tool Project Description - 2026.txt
src/: BFAerodynamics.cpp  BFAerodynamics.h  BFSimulateCmd.cpp  BFSimulateCmd.h  BFState.h  PluginMain.cpp
src/mel/: butterFlight_ui.mel
